--- a/projects/index.html
+++ b/projects/index.html
@@ -12,6 +12,20 @@
 
 <h1 class="projects-title">Projects</h1>
 
+<div class="container">
+  <svg id="projects-pie-plot" viewBox="-50 -50 100 100">
+    <!-- Pie chart will be dynamically generated here -->
+  </svg>
+  <ul class="legend"></ul>
+</div>
+
+<input
+  class="searchBar"
+  type="search"
+  aria-label="Search projects"
+  placeholder="🔍 Search projects…"
+/>
+
 <div class="projects">
   <!-- Projects will be dynamically loaded from projects.json -->
 </div>
