Lab 6 Step 1: Add data loading, commit processing, and summary statistics

--- a/meta/index.html
+++ b/meta/index.html
@@ -6,11 +6,17 @@
   <title>Meta Analysis - Harsh Arya</title>
   <link rel="stylesheet" href="../style.css">
   <script type="module" src="../global.js"></script>
+  <script type="module" src="main.js"></script>
 </head>
 <body>
 
   <h1>Code Analysis</h1>
   <p>This page displays various statistics and visualizations about the codebase of this portfolio website.</p>
+
+  <section>
+    <h2>Summary Statistics</h2>
+    <div id="stats"></div>
+  </section>
 
   <section>
     <h2>About This Analysis</h2>
