Lab 6 Step 2: Add scatterplot visualization of commits by time of day

--- a/meta/index.html
+++ b/meta/index.html
@@ -19,6 +19,11 @@
   </section>
 
   <section>
+    <h2>Commits by time of day</h2>
+    <div id="chart"></div>
+  </section>
+
+  <section>
     <h2>About This Analysis</h2>
     <p>
       Using automated code analysis tools, we can gain insights into the structure, 
