Lab 6 Step 5: Add brushing interaction with language breakdown

--- a/meta/index.html
+++ b/meta/index.html
@@ -21,6 +21,8 @@
   <section>
     <h2>Commits by time of day</h2>
     <div id="chart"></div>
+    <p id="selection-count">No commits selected</p>
+    <dl id="language-breakdown" class="stats"></dl>
   </section>
 
   <dl id="commit-tooltip" class="info tooltip" hidden>
