Implement Lab 8 animations and scrollytelling

--- a/meta/index.html
+++ b/meta/index.html
@@ -20,9 +20,32 @@
 
   <section>
     <h2>Commits by time of day</h2>
-    <div id="chart"></div>
-    <p id="selection-count">No commits selected</p>
-    <dl id="language-breakdown" class="stats"></dl>
+
+    <div>
+      <label>
+        Show commits until:
+        <input
+          type="range"
+          id="commit-progress"
+          min="0"
+          max="100"
+          value="100"
+        >
+        <time id="commit-time"></time>
+      </label>
+    </div>
+
+    <div id="scrolly-1">
+      <div id="scatter-story">
+        <!-- Commit narrative steps will be injected here by D3 -->
+      </div>
+
+      <div id="scatter-plot">
+        <div id="chart"></div>
+        <p id="selection-count">No commits selected</p>
+        <dl id="language-breakdown" class="stats"></dl>
+      </div>
+    </div>
   </section>
 
   <dl id="commit-tooltip" class="info tooltip" hidden>
@@ -48,6 +71,8 @@
       our coding patterns and identify areas for improvement.
     </p>
   </section>
+
+  <dl id="files"></dl>
 
 </body>
 </html>
